src/user.css
/* ... */
/* Repeat all */
.main-repeatButton-button[aria-checked='true'] {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_arrow_repeat_all_24_filled.svg');
  background-color: var(--spice-accent) !important;
  height: 22px !important;
}

/* Shuffle disabled */
.main-shuffleButton-button {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_arrow_shuffle_24_regular.svg');
  background-color: var(--spice-subtext) !important;
  height: 24px !important;
}

/* Shuffle enabled */
.main-shuffleButton-button[aria-checked='true'] {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_arrow_shuffle_24_filled.svg');
  background-color: var(--spice-accent) !important;
  height: 24px !important;
}

/* Eternal Jukebox disabled */
.main-repeatButton-button[aria-label='Activer jukebox'] {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/phosphor-icons/infinity.svg');
  background-color: var(--spice-subtext) !important;
  height: 22px !important;
}

/* Eternal Jukebox enabled */
.main-repeatButton-active[aria-label='Activer jukebox'] {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/phosphor-icons/infinity-bold.svg');
  background-color: var(--spice-accent) !important;
  height: 22px !important;
}

/*Like button*/
.control-button-heart[aria-checked='true'] {
  color: var(--spice-accent);
}

.control-button-heart[aria-checked='false'] {
  color: var(--spice-subtext);
}

/* Built-in full screen mode fixes */
.main-playPauseButton-button path,
.main-skipBackButton-button path,
.main-skipForwardButton-button path,
.main-repeatButton-button path,
.main-shuffleButton-button path,
.Ww5ppB6W74laf1c0H_pR path,
.XGCdw_LcXQHrxmvpxjwi path,
.MRfNcNMd_djj3KOg_VOB path {
  display: none !important;
}

.npv-header__metadata {
  color: rgba(var(--spice-rgb-text), 0.6) !important;
}

.Gw7E7MkWci1ttQhb4EK0,
.Lgyj1e9c3lrdgVGlMIyV:hover {
  color: var(--spice-text) !important;
}

.Gw7E7MkWci1ttQhb4EK0:hover,
.Lgyj1e9c3lrdgVGlMIyV {
  color: var(--spice-subtext) !important;
}

.Lgyj1e9c3lrdgVGlMIyV.main-genericButton-buttonActive {
  color: var(--spice-accent) !important;
}

/*Removes download progress bar and icon on playlist*/
.L3vU7A1LzZSa3DcQcnmK,
.PJuB4n2TjjZFBiWAW2zx,
.main-rootlist-statusIcons {
  display: none !important;
}

/*Remove gradient in name*/
.main-trackInfo-overlay::after,
.main-trackInfo-overlay::before {
  width: 0 !important;
}

/* ads */

.main-leaderboardComponent-container,
.main-billboardComponent-footer,
.desktoproutes-homepage-takeover-ad-hptoComponent-parentContainer {
  display: none;
}

.desktoproutes-homepage-takeover-ad-hptoComponent-parentContainer,
.desktoproutes-homepage-takeover-ad-hptoComponent-container,
.main-leaderboardComponent-container {
  display: none !important;
}

.main-topBar-UpgradeButton {
  display: none !important;
}

/* play buttons */

[dir='ltr'] .main-card-PlayButtonContainer {
  filter: drop-shadow(0 0 5px rgba(0 0 0 / 30%));
}

.main-card-imageContainer > .main-card-PlayButtonContainer > .main-playButton-PlayButton > button {
  background-color: white !important;
}

.main-playButton-button,
.main-playButton-PlayButton > button,
.main-trackList-rowPlayPauseButton {
  background-color: var(--spice-text) !important;
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_play_24_filled.svg');
}

.main-playButton-PlayButton:focus,
.main-playButton-PlayButton:hover {
  background-color: transparent;
}

.main-playButton-PlayButton > button {
  width: 40px;
  height: 40px;
}

.main-playButton-PlayButton > button > span {
  display: none;
}

/* error content */

.main-pageErrorTemplate-errorBody {
  min-height: calc((100vh - 64px) - 105px);
}

.main-pageErrorTemplate-errorBody svg {
  margin: 0;
}

/* spicetify */

#spicetify-sidebar-config {
  flex-direction: column;
  top: -60px !important;
}

#spicetify-show-list > * {
  padding: 0px;
}

.marketplace-header {
  padding-top: 8px;
}

.toggle-module__toggle-input___ceLM4_marketplace:checked
  ~ .toggle-module__toggle-indicator-wrapper___6Lcp0_marketplace {
  background-color: var(--spice-accent);
}

.toggle-module__toggle-indicator___nCxwE_marketplace {
  background: var(--spice-card) !important;
}

.marketplace-card--installed {
  border: 1px rgba(var(--spice-rgb-accent), 0.7) solid !important;
}

button.arrow-btn {
  background-color: var(--spice-selected-row);
  color: var(--spice-text);
}

/* spicetify extensions */

.main-topBar-button[title='Popup Lyrics'],
.main-topBar-button[title='Full App Display'],
.main-topBar-button[title='Bookmark'] {
  background-color: var(--spice-card) !important;
}

.a2ruVaZt_DdrdHz3GqgU,
.x-categoryCard-CategoryCard {
  color: var(--spice-alt-text);
}

.UyzJidwrGk3awngSGIwv,
.main-addButton-button[aria-checked='false'] {
  color: var(--spice-text);
}

/* New lyrics style */

:root {
  --lyrics-text-direction: left;
}

.main-lyricsCinema-controls {
  top: 80px !important;
}

#lyrics-backdrop {
  position: absolute;
  width: 100%;
  height: 100%;
}

#lyrics-backdrop-container {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: var(--spice-main);
}

.lyrics-lyrics-background {
  visibility: hidden !important;
}

.lyrics-lyrics-container {
  --lyrics-color-active: rgb(255, 255, 255) !important;
  --lyrics-color-inactive: rgba(255, 255, 255, 0.35) !important;
  --lyrics-color-passed: rgba(255, 255, 255, 0.8) !important;
  --lyrics-color-messaging: rgba(255, 255, 255, 0.45) !important;
}

.lyrics-lyricsContent-lyric {
  opacity: 0;
  visibility: hidden;
  animation-fill-mode: forwards;
  margin: 0.3rem 0;
  text-shadow: none;
  transition:
    text-shadow 100ms ease,
    color 100ms ease;
}

.lyrics-lyricsContent-text {
  transform-origin: var(--lyrics-text-direction);
}
/* ... */

